--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  chmtop.c2wtopf = window;
  var pageid=""; var searchquery=""; var indexquery=""; var syncmode=false; var pagenum=0;
  var qs = location.search.substr(1); var A  = qs.split("&");
- var B  = null; var F  = "source/_build/index.html"; var FT = "c";
+ var B  = null; var F  = "./source/_build/index.html"; var FT = "c";
  for(var i=0;i<A.length;i++){ B=A[i].split("="); A[i]=[B[0],B[1]]; }
  for (var j=0;j<A.length;j++){
    if(A[j][0]=="page") F=A[j][1];
@@ -34,7 +34,7 @@ var tabs = new Array(1);
 switch (FT) {
  case "i": tabs[0]="helpleftind.html"; break;
  case "s": tabs[0]="helpleftsch.html"; break;
- default: tabs[0]="helpleftcon.html"; break;
+ default: tabs[0]="./helpcontents.html"; break;
 } </script>
 
 <title>GameMaker Studio 2</title>
